--- a/AppForm/AppForm.csproj
+++ b/AppForm/AppForm.csproj
@@ -14,6 +14,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Google.Apis" Version="1.67.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ImageOperations\ImageOperations.csproj" />
     <ProjectReference Include="..\ReadDataFromExcel\ReadDataFromExcel.csproj" />
   </ItemGroup>
