--- a/ReadDataFromExcel/ReadDataFromExcel.csproj
+++ b/ReadDataFromExcel/ReadDataFromExcel.csproj
@@ -9,6 +9,9 @@
 
   <ItemGroup>
     <PackageReference Include="ClosedXML" Version="0.102.0" />
+    <PackageReference Include="Google.Apis" Version="1.67.0" />
+    <PackageReference Include="Google.Apis.Auth" Version="1.67.0" />
+    <PackageReference Include="Google.Apis.Sheets.v4" Version="1.67.0.3148" />
     <PackageReference Include="System.Drawing.Common" Version="7.0.0" />
   </ItemGroup>
 
