--- a/ImageOperations/ImageOperations.csproj
+++ b/ImageOperations/ImageOperations.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Google.Apis" Version="1.67.0" />
     <PackageReference Include="iTextSharp" Version="5.5.13.3" />
     <PackageReference Include="System.Drawing.Common" Version="7.0.0" />
+    <PackageReference Include="Toolbox" Version="0.2.2" />
   </ItemGroup>
 
   <ItemGroup>
