--- a/ReadDataFromExcel/ReadDataFromExcel.csproj
+++ b/ReadDataFromExcel/ReadDataFromExcel.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Google.Apis.Auth" Version="1.67.0" />
     <PackageReference Include="Google.Apis.Sheets.v4" Version="1.67.0.3148" />
     <PackageReference Include="System.Drawing.Common" Version="7.0.0" />
+    <PackageReference Include="Toolbox" Version="0.2.2" />
   </ItemGroup>
 
 </Project>
