--- a/AppForm/AppForm.csproj
+++ b/AppForm/AppForm.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <PackageReference Include="Google.Apis" Version="1.67.0" />
+    <PackageReference Include="Google.Apis.Sheets.v4" Version="1.67.0.3148" />
     <PackageReference Include="Toolbox" Version="0.2.2" />
   </ItemGroup>
 
